<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Calculator View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="CalculatorViewController" customModule="ScroogeMcDuck" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="U2h-OW-XYz">
                                <rect key="frame" x="20" y="88" width="374" height="220"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter salary on paper" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hak-hU-9mv" customClass="SalaryInputFieldView" customModule="ScroogeMcDuck" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="J66-rb-6T6"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="salaryTextFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="83u-Ew-cmc"/>
                                        </connections>
                                    </textField>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="12y-UZ-o2f">
                                        <rect key="frame" x="0.0" y="64" width="374" height="64"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Additional pension payments?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D6V-2t-LIq">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="20" id="9PU-Ft-8Ma"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="NI3-8A-jZY" customClass="PensionOptionSegmentView" customModule="ScroogeMcDuck" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="20" width="374" height="45"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="FwX-qM-o82"/>
                                                </constraints>
                                                <segments>
                                                    <segment title="No"/>
                                                    <segment title="2.1 %"/>
                                                    <segment title="3 %"/>
                                                </segments>
                                                <connections>
                                                    <action selector="additionalPensionSelected:" destination="BYZ-38-t0r" eventType="valueChanged" id="mPU-9N-MOI"/>
                                                </connections>
                                            </segmentedControl>
                                        </subviews>
                                    </stackView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ROf-1n-bCv">
                                        <rect key="frame" x="0.0" y="148" width="374" height="72"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                        <color key="textColor" systemColor="systemGreenColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="400" id="s38-rh-clA"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="U2h-OW-XYz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="o81-nd-f87"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="U2h-OW-XYz" secondAttribute="trailing" constant="20" id="oQo-KE-kyz"/>
                            <constraint firstItem="U2h-OW-XYz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="44" id="wF3-Gy-0Ib"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="additionalPensionOption" destination="NI3-8A-jZY" id="Ld7-TK-uHX"/>
                        <outlet property="salaryInputTextField" destination="Hak-hU-9mv" id="mig-4Z-rhD"/>
                        <outlet property="takeHomeSalaryLabel" destination="ROf-1n-bCv" id="Crd-oa-Uie"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="18.840579710144929" y="93.75"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemGreenColor">
            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
